The html2canvas output was blurry, fixed it by increasing scale

--- a/src/styles/CVSection.css
+++ b/src/styles/CVSection.css
@@ -15,17 +15,11 @@
   /* box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5); */
 }
 
-.CV-section #PDFViewer {
+/* .CV-section #PDFViewer {
   width: 650px;
   height: 842px;
-}
+} */
 
 .CV-wrapper {
   margin: 0 auto;
-}
-
-.CVPage {
-  padding: 10px;
-  font-size: 20px;
-  color: red;
 }
